--- a/latex/oppgave.tex
+++ b/latex/oppgave.tex
@@ -28,7 +28,8 @@
 \input{matter/implivector}
 
 \part{Results}
-\input{matter/baselineresults}
+\input{matter/idresults}
+\input{matter/detresults}
 
 
 \bibliographystyle{ieeetr}
