--- a/latex/references.bib
+++ b/latex/references.bib
@@ -193,6 +193,15 @@
   year={2003},
   publisher={MIT Press}
 }
+@inproceedings{noor2006efficient,
+  title={Efficient language identification using anchor models and support vector machines},
+  author={Noor, E. and Aronowitz, H.},
+  booktitle={Speaker and Language Recognition Workshop, 2006. IEEE Odyssey 2006: The},
+  pages={1--6},
+  year={2006},
+  organization={IEEE}
+}
+
 
 
 
